# Backend/routes/api.php
@@ -17,6 +17,7 @@ Route::get('/up', function() {
 });
 
 Route::get('/aulas/types', [AulasControllerAdapter::class, 'listAulasTypes']);
+Route::get('/aulas/studios', [AulasControllerAdapter::class, 'listStudios']);
 
 require __DIR__.'/api/students.php';
 require __DIR__.'/api/instructors.php';
